# fuzzer

./: CI.yml  CMakeLists.txt  LICENSE  README.md  main.c  utility.h
.github/workflows/: cli.yml
tests/: CMakeLists.txt  utility_fuzzer_test.c  utility_test.c
